# Gaia

./: .gitignore  .gitmodules  LICENSE  README.md
Simulator/GraphColoring/: CMakeLists.txt  GraphColoring.cpp
Simulator/PBDDynamics/: CMakeLists.txt  main.cpp
Simulator/PBDDynamics/ParameterGen/: M01_Parameters.py  M02_GenRunningParameters.py  M03_ParametersCreator.py  S01_OctopusDropping.py  S02_SquishyBallDropping.py  S03_200MNoodle.py
Simulator/PBDDynamics/ParameterGen/Examples/: Models.json  Parameters.json
Simulator/VBDCloth/: CMakeLists.txt  Test.cpp  Test.h  main.cpp
Simulator/VBDCloth/ParameterGen/: M01_Parameters.py  M02_GenRunningParameters.py  S01_Twisting.py  S02_KnotPulling.py  S03_MultiLayerClothOnCollider.py
Simulator/VBDCloth/ParameterGen/Data/: Bended.obj.vertexColoring.withBendingEnergy.json  C100_horizontal.obj.vertexColoring.json  C100_horizontal.obj.vertexColoring.withBendingEnergy.json  C200_horizontal.obj.vertexColoring.json  C300_horizontal.obj.vertexColoring.json  C50_horizontal.obj.vertexColoring.json  C50_horizontal.obj.vertexColoring.withBendingEnergy.json  C5_horizontal.obj.vertexColoring.json  Triangle_1_on_C5.obj.vertexColoring.json  cube.obj.vertexColoring.withBendingEnergy.json  square_6.obj.vertexColoring.withBendingEnergy.json  square_test.obj.vertexColoring.withBendingEnergy.json
Simulator/VBDCloth/ParameterGen/Data/PatternedCloth/: seamlessTextured-20Kf-cm.obj.vertexColoring.withBendingEnergy.json
Simulator/VBDCloth/ParameterGen/Data/S08_TeapotRandomInitialize/: A00000000.json  A00000000_rand.json
Simulator/VBDCloth/ParameterGen/DataGen/: S01_GenCloth.py  S02_GenCloth_bended.py
Simulator/VBDCloth/ParameterGen/DataGen/Data/: S01_GenCloth_horizontal.py
Simulator/VBDCloth/ParameterGen/DataGen/Data/SyntheticData/: Bended.blend  Bended.blend1  Bended.mtl  Bended_2Tris.obj.vertexColoring.withBendingEnergy.json  C200_horizontal.obj.vertexColoring.withBendingEnergy.json  C223_horizontal.obj.vertexColoring.json  C223_horizontal.obj.vertexColoring.withBendingEnergy.json  C250.obj.vertexColoring.withBendingEnergy.json  C2_horizontal.obj.vertexColoring.json  C30.obj.vertexColoring.json  C300_horizontal.obj.vertexColoring.withBendingEnergy.json  C30_bended.obj.vertexColoring.withBendingEnergy.json  C4.obj.vertexColoring.json  C70_horizontal.obj.vertexColoring.json  C70_horizontal.obj.vertexColoring.withBendingEnergy.json  C70_horizontal_quad.ply  cube.mtl  cube.ply  square.obj.vertexColoring.withBendingEnergy.json  square_2.obj.vertexColoring.withBendingEnergy.json  square_3.obj.vertexColoring.withBendingEnergy.json
Simulator/VBDCloth/ParameterGen/Examples/: Models.json  Parameters.json
Simulator/VBDCloth/ParameterGen/KnotGenerator/: M01_Curves.py  M02_Geometry.py  S01_FrenetFrameForCRCurves.m  S01_InitializingManyKnotsFractal3_WithDoubleRotation.py  S02_Initializing_1knot.py  S02_Initializing_knots_v2.py  S03_Initializing_smallknot_for_test.py  S04_Initializing_knots_v3_simple.py
Simulator/VBDCloth/ParameterGen/KnotGenerator/Data/: A00000050.ply  knotSmall_1200x10_restShape.obj.vertexColoring.withBendingEnergy.json  knotSmall_cm.mtl  knotSmall_restShape.obj.vertexColoring.withBendingEnergy.json  knot_V2_2400x20_restShape.obj.vertexColoring.withBendingEnergy.json  knot_leftend.json  knot_restShape.obj.vertexColoring.withBendingEnergy.json  knot_rightend.json  knot_untangle.mtl  knot_untangle_cm.mtl  knot_v3_1500x20_restShape.obj.vertexColoring.withBendingEnergy.json
Simulator/VBDCloth/ParameterGen/Parameters/S01_Twisting/C100_Twist_ContactR0.2_CStif100000.0_bd20_damping3e-05_relaxiation0.42_thick0.01_CDPerIter/: Models.json  Parameters.json  Run_PC00.cmd
Simulator/VBDCloth/ParameterGen/Parameters/S01_Twisting/C50_Twist_ContactR0.2_CStif100000.0_bd20_damping3e-05_relaxiation0.42/: Models.json  Parameters.json  Run_PC00.cmd
Simulator/VBDCloth/ParameterGen/Parameters/S01_Twisting/C50_Twist_ContactR0.2_CStif100000.0_bd20_damping3e-05_relaxiation0.42_thick0.01_CDPerIter/: Parameters.json  Run_PC00.cmd
Simulator/VBDCloth/ParameterGen/Parameters/S02_KnotPulling/Knot_ContactR0.2_CStif1000000.0_bd50_damping1e-07_relaxiation0.42_pull10/: Models.json  Parameters.json  Run_PC00.cmd
Simulator/VBDCloth/ParameterGen/Parameters/S03_MultiLayerClothOnCollider/C70_CR0.3_Cs100000.0_bd10.0_step20_iters15_init2_accel0.0_damp2e-06_l5_fix_VBD_run2/: Models.json  Parameters.json  Run_PC00.cmd
Simulator/VBDDynamics/: CMakeLists.txt  main.cpp
Simulator/VBDDynamics/ParameterGen/: M01_Parameters.py  M02_GenRunningParameters.py  M03_Visualization.py  S01_HybridModels_32_Drop_sequentiallyAppear.py  S02_Drop2SquishyBallLowRes.py  S03_Twist2Beams.py  S04_HybridModels_Many_Drop_sequential.py  S05_SquishyBalls_Many_DropToTeapot_sequential.py  S06_TestFriction_2Cube_GPU.py  S07_TestDamping_Beam_GPU.py  S08_TeapotRandomInitialize.py
Simulator/VBDDynamics/ParameterGen/Examples/: Models.json  Parameters.json
Simulator/VBDDynamics/ParameterGen/Parameters/S01_Experiment_HybridModelsDrop_sequentiallyAppear/Test_64HybridModels_2steps_40Iters_stiff_Friction/: Models.json  Parameters.json  Run_AnkaPC00.cmd
Simulator/VBDDynamics/ParameterGen/Parameters/S01_HybridModels_32_Drop_sequentiallyAppear/Test_64HybridModels_2steps_40Iters_stiff_Friction/: Parameters.json  Run_AnkaPC00.cmd
Simulator/VBDDynamics/ParameterGen/Parameters/S02_Drop2SquishyBallLowRes/Test_2Ball_step10_iter10_0.0ColThickness_GPU_newImpl_run02/: Models.json  Parameters.json  Run_AnkaPC00.cmd
(+579 files in other folders)
